# pixelbar-pyLedcontroller

./: LICENSE  README.md  __main__.py  ledcontroller-server.py  ledcontroller.py  pixelLightServer.py  pyproject.toml  state.py
app/: ledcontroller-server.py  ledcontroller.py  pixelLightServer.py  state.py
system/: ledcontroller.service
