[tool.poetry]
name = "pixelbar-pyLedController"
version = "0.1.0"
description = ""
authors = ["aldo@fieldofview.com"]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
